# fontweightissue-qt5

./: .gitignore  CMakeLists.txt  Makefile  README  dialog.cpp  dialog.h  fontweightissue.pro  main.cpp  timing.c
kwidgetsaddons/: kfontchooser.cpp  kfontchooser.h  kfontchooserdialog.cpp  kfontchooserdialog.h  kfontrequester.cpp  kfontrequester.h
